--- a/Assets/styles/style.css
+++ b/Assets/styles/style.css
@@ -11,6 +11,16 @@ html {
   font-size: 14px !important;
 }
 
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+.w-fit {
+  width: fit-content !important;
+}
+
 .shadow-custom {
   box-shadow: 0 0 7px var(--bs-border-color) !important;
 }
@@ -123,6 +133,17 @@ img[alt="calendar"] {
 
 /* secondary nav section ends here */
 
+/* swiper section starts here */
+
+swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+/* swiper section ends here */
 
 /* container section ends here */
 
