--- a/Assets/styles/style.css
+++ b/Assets/styles/style.css
@@ -135,11 +135,12 @@ img[alt="calendar"] {
 
 /* swiper section starts here */
 
-swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.custom-pagination button:focus{
+  outline: 0 !important;
+}
+
+.primary-button {
+  background-color: var(--bs-primary) !important;
 }
 
 /* calendar section starts here */
@@ -153,11 +154,12 @@ swiper-slide img {
 }
 
 .fc {
-  font-size: 0.7rem;
+  font-size: 0.85rem;
 }
 
 .fc-daygrid-day-frame {
-  padding: 1px !important;
+  aspect-ratio: 1 / 1 !important;
+  padding: 2px !important;
 }
 
 .fc .fc-daygrid-day:hover {
