--- a/Assets/styles/style.css
+++ b/Assets/styles/style.css
@@ -133,7 +133,7 @@ img[alt="calendar"] {
 
 /* secondary nav section ends here */
 
-/* swiper section starts here */
+/* slider section starts here */
 
 .custom-pagination button:focus{
   outline: 0 !important;
@@ -154,7 +154,7 @@ img[alt="calendar"] {
 }
 
 .fc {
-  font-size: 0.85rem;
+  font-size: 0.7rem;
 }
 
 .fc-daygrid-day-frame {
@@ -166,9 +166,27 @@ img[alt="calendar"] {
   cursor: pointer;
 }
 
+.fc-past-disabled {
+  position: relative !important;
+  background-color:  #f0f0f0 !important;
+  pointer-events: none !important;
+  opacity: 0.6 !important;
+}
+
+.fc-past-disabled::after {
+  content: "";
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: not-allowed !important; 
+  pointer-events: auto !important; 
+}
+
 /* calendar section ends here */
 
-/* swiper section ends here */
+/* slider section ends here */
 
 /* container section ends here */
 
