--- a/Assets/styles/style.css
+++ b/Assets/styles/style.css
@@ -143,7 +143,7 @@ img[alt="calendar"] {
 
 /* slider section starts here */
 
-.custom-pagination button:focus{
+.custom-pagination button:focus {
   outline: 0 !important;
 }
 
@@ -176,7 +176,7 @@ img[alt="calendar"] {
 
 .fc-past-disabled {
   position: relative !important;
-  background-color:  #f0f0f0 !important;
+  background-color: #f0f0f0 !important;
   /* pointer-events: none !important; */
   opacity: 0.6 !important;
 }
@@ -188,11 +188,25 @@ img[alt="calendar"] {
   left: 0;
   width: 100%;
   height: 100%;
-  cursor: not-allowed !important; 
-  pointer-events: auto !important; 
+  cursor: not-allowed !important;
+  pointer-events: auto !important;
 }
 
 /* calendar section ends here */
+
+/* dataTables section starts here */
+
+.table-responsive {
+  border: 1px solid #dee2e6 !important;
+  border-radius: 4px;
+}
+
+.white-space {
+  white-space: nowrap !important;
+}
+
+
+/* dataTables section ends here */
 
 /* slider section ends here */
 
@@ -215,7 +229,7 @@ img[alt="calendar"] {
   .fc {
     font-size: 0.85rem;
   }
-  
+
   .fc-daygrid-day-frame {
     padding: 2px !important;
   }
