--- a/Assets/styles/desktop.css
+++ b/Assets/styles/desktop.css
@@ -2,6 +2,10 @@ html {
   font-size: 16px !important;
 }
 
+#nav-flex {
+  justify-content: space-between;
+}
+
 /* container section starts here */
 /* secondary navbar section starts here */
 
@@ -16,6 +20,20 @@ html {
 }
 
 .fc-daygrid-day-frame {
-  padding: 6px !important;
+  max-height: 400px !important;
+  padding: 15px !important;
 }
 /* container section ends here */
+
+/* datatables section starts here */
+
+.dataTables_wrapper {
+  overflow-x: auto;
+}
+
+.dataTables_wrapper table {
+  width: auto !important;  
+  font-size: 1rem;
+}
+
+/* datatables section ends here */
